--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -15,9 +15,6 @@
                     &nbsp;@UniversityResources.ClassChooseYellowTitle3&nbsp;<a ui-sref="dashboard">@UniversityResources.ClassChooseYellowClickHere</a>
                 </h2>
             </div>
-            <div class="title-strip">
-            <h2 ng-if="!cc.selectedCoursesView.length">@UniversityResources.OnboardingHeaderStep1</h2>
-            </div>
             <div class="wrapper" flex-gt-md="85">
             <h2 class="title" ng-if="!cc.selectedCoursesView.length">@UniversityResources.OnboardingHeaderStep1</h2>
             <h2 class="title" ng-if="cc.selectedCoursesView.length">@UniversityResources.OnboardingHeaderStep2</h2>
@@ -41,7 +38,7 @@
         <div class="search-container" flex-gt-md="85">
             <div class="grid-container">
                 <ol class="results list-unstyled" id="results">
-                    <li color-parent="{{::department.id}}" ng-repeat="department in cc.data |limitTo:cc.limit track by department.id">
+                    <li color-parent="{{::department.id}}" ng-repeat="department in cc.data track by department.id">
                         <div class="closed-department" ng-if="::department.type === 'closed'" ng-include="'close-department.html'"></div>
                         <div ng-if="::department.type !== 'closed'" ng-include="'open-department.html'"></div>
                     </li>
