--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -1,347 +1,15 @@
 body #main-nav {
-  -moz-transition: all 0.1s ease !important;
-  -o-transition: all 0.1s ease !important;
-  -webkit-transition: all 0.1s ease !important;
-  transition: all 0.1s ease !important;
-}
-body.collapseHeader .title {
-  display: none;
+  -moz-transition: transform 0.1s ease !important;
+  -o-transition: transform 0.1s ease !important;
+  -webkit-transition: transform 0.1s ease !important;
+  transition: transform 0.1s ease !important;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
+  -webkit-perspective: 1000;
 }
 body.collapseHeader .class-choose .top-container {
-  top: 0;
-  box-shadow: 0 1px 5px #888b8e;
-}
-body.collapseHeader .title-strip {
-  opacity: 1;
-}
-.class-choose {
-  /*.content {
-        max-width: 600px;
-        margin: 0 auto;
-        text-align: center;
-
-        img {
-            margin: 30px auto 0 auto;
-            display: block;
-        }
-
-        &.default {
-            .search-image {
-                position: relative;
-                display: inline-block;
-
-                @media(max-width: 600px) {
-                    img {
-                        height: 275px;
-                    }
-                }
-
-                .text {
-                    margin-top: 10px;
-                    text-align: center;
-                    width: 100%;
-                    font-size: 18px;
-                    color: @buttonColorBlue;
-                }
-            }
-        }
-
-        .box-style {
-            padding: 10px 15px;
-            text-align: left;
-            height: 86px;
-
-            .course-name {
-                margin: 0 auto 22px auto;
-                font-size: 16px;
-            }
-
-            .number, .instructor {
-                font-size: 12px;
-                min-height: 14px;
-                line-height: 14px;
-            }
-        }
-
-        &.search-results {
-            .wrapper {
-                .result {
-                    height: auto;
-                    padding: 10px 15px;
-                    text-align: left;
-                }
-            }
-
-            .empty-state {
-                margin: 0 auto;
-                max-width: 750px;
-                background-image: url(../../Images/Site/no_search_results.png);
-                background-repeat: no-repeat;
-                padding: 0 128px 0 0;
-                background-position: 100% 0;
-                background-size: 128px;
-                min-height: 400px;
-
-                @media(max-width: 600px) {
-                    padding: 0;
-                    background-image: none;
-                }
-
-                h2 {
-                    margin-top: 80px;
-                    color: @svgQuizRanking;
-                    font-weight: bold;
-                }
-
-                .text {
-                    margin: 26px 0 14px 0;
-                    font-size: 16px;
-                    white-space: pre-wrap;
-
-                    @media(max-width: 600px) {
-                        font-size: 15px;
-                    }
-                }
-            }
-        }
-
-        &.selected-boxes {
-            .subtitle {
-                font-size: 16px;
-                margin: 0;
-            }
-
-            .header {
-                .displayFlex;
-                .align-items(center);
-                .justifyContet(space-between);
-                padding: 40px 8px 0 8px;
-
-                @media(max-width:600px) {
-                    padding-top: 30px;
-                }
-
-                .text {
-                    color: @buttonColorBlue;
-                }
-
-                .progress {
-                    color: @textColorGrey;
-                }
-
-                .text, .progress {
-                    font-size: 16px;
-                }
-            }
-
-            .empty {
-                .displayFlex;
-                .align-items(center);
-                .justifyContet(center);
-                border: 1px dashed @textColorGrey;
-                background: @backgroundCalmGrey;
-                color: @textColorGrey;
-
-                h2 {
-                    margin: 0;
-                    font-size: 16px;
-                }
-
-                &:hover {
-                    background: @backgroundCalmGrey;
-                }
-            }
-
-            @media(max-width: 600px) {
-                .selected {
-                    .instructor, .number {
-                        display: none;
-                    }
-                }
-
-                .box-style {
-                    height: 50px;
-                }
-
-                .buttons button {
-                    width: 80%;
-                    max-width: 100%;
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-            }
-
-            .buttons {
-                .displayFlex;
-                .align-items(center);
-                .justifyContet(flex-end);
-                flex-wrap: wrap;
-
-                button {
-                    &.done {
-                        background: @notificationColor;
-
-                        &:hover {
-                            background: #d5580c;
-                        }
-                    }
-                }
-            }
-        }
-
-        &.add-class {
-            padding-top: 40px;
-
-            .department {
-                font-size: 16px;
-                margin: 0;
-            }
-
-            form {
-                margin: 20px auto;
-            }
-
-            .form-field {
-                text-align: left;
-                margin-bottom: 18px;
-
-                .md-errors-spacer {
-                    display: none;
-                }
-            }
-
-            .md-errors-spacer {
-                display: none;
-            }
-
-            .buttons {
-                text-align: right;
-            }
-
-            .box-style {
-                .displayFlex;
-                .align-items(center);
-            }
-        }
-
-        &.add-class, &.select-department {
-
-            .box-style {
-                height: 50px;
-                margin: 0 auto;
-
-                span {
-                    font-size: 16px;
-                    display: block;
-                    line-height: normal;
-                }
-            }
-        }
-
-        &.select-department, &.selected-boxes {
-            @media(max-width: 600px) {
-                .department, .add-department, .wrapper {
-                    padding: 4px 8px;
-                }
-
-                .box-style, h2 {
-                    line-height: 30px;
-                }
-            }
-
-            .add-department {
-                button {
-                    width: 100%;
-                    padding: 0 10px;
-                    .displayFlex;
-                    .align-items(center);
-                    .justifyContet(center);
-
-                    md-icon {
-                        width: 16px;
-                        height: 16px;
-                        fill: @buttonColorBlue;
-                    }
-
-                    h2 {
-                        color: @buttonColorBlue;
-                        font-size: 16px;
-                        height: auto;
-                        margin: 0 10px;
-                    }
-                }
-
-                form {
-                    position: relative;
-
-                    input {
-                        height: 100%;
-                        width: 100%;
-                        border: none;
-                        border-bottom: 1px solid @textColorGrey;
-                        background: none;
-                        font-size: 16px;
-                    }
-
-                    .error {
-                        position: absolute;
-                        bottom: -16px;
-                        color: rgb(221,44,0);
-                    }
-                }
-            }
-
-            .buttons {
-                text-align: right;
-                padding: 16px 8px 8px 8px;
-            }
-        }
-    }*/
-  /*#region new boxes styling*/
-  /*#endregion*/
-  /*.search-form, .select-department .departments {
-        margin-top: 46px;
-        margin-bottom: 0;
-
-        @media(max-width: 600px) {
-            margin-top: 30px;
-        }
-    }*/
-  /*.add-class {
-        .title {
-            padding-bottom: 50px;
-
-            @media(max-width: 600px) {
-                padding-bottom: 30px;
-            }
-        }
-    }
-
-
-    .switch {
-        position: relative;
-        height: 100vh;
-        overflow: hidden;
-    }
-
-    .switch .content.ng-animate {
-        transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-    }
-
-    .switch .content.ng-leave.ng-leave-active,
-    .switch .content.ng-enter {
-        top: -50px;
-    }
-
-    .switch .content.ng-leave,
-    .switch .content.ng-enter.ng-enter-active {
-        top: 0;
-    }*/
+  transform: translate(0, -65px);
 }
 @media (min-width: 960px) {
   .class-choose {
@@ -352,11 +20,10 @@ body.collapseHeader .title-strip {
 .class-choose md-input-container {
   margin: 5px 0;
 }
-.class-choose .explore {
+.class-choose .explore .results {
   padding-top: 205px;
 }
-.class-choose .status-strip,
-.class-choose .title-strip {
+.class-choose .status-strip {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -371,9 +38,7 @@ body.collapseHeader .title-strip {
   width: 100%;
 }
 .class-choose .status-strip h2,
-.class-choose .title-strip h2,
-.class-choose .status-strip ng-pluralize,
-.class-choose .title-strip ng-pluralize {
+.class-choose .status-strip ng-pluralize {
   font-size: 16px;
   line-height: normal;
   margin: 0;
@@ -381,18 +46,14 @@ body.collapseHeader .title-strip {
 }
 @media (max-width: 600px) {
   .class-choose .status-strip h2,
-  .class-choose .title-strip h2,
-  .class-choose .status-strip ng-pluralize,
-  .class-choose .title-strip ng-pluralize {
+  .class-choose .status-strip ng-pluralize {
     font-size: 14px;
   }
 }
-.class-choose .status-strip ng-pluralize,
-.class-choose .title-strip ng-pluralize {
+.class-choose .status-strip ng-pluralize {
   text-transform: lowercase;
 }
-.class-choose .status-strip a,
-.class-choose .title-strip a {
+.class-choose .status-strip a {
   color: #ffffff;
   text-decoration: underline;
 }
@@ -405,6 +66,10 @@ body.collapseHeader .title-strip {
   -o-transition: all 0.1s ease !important;
   -webkit-transition: all 0.1s ease !important;
   transition: all 0.1s ease !important;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
+  -webkit-perspective: 1000;
 }
 .class-choose .title {
   text-align: center;
@@ -433,20 +98,13 @@ body.collapseHeader .title-strip {
   right: 0;
   left: 0;
   padding-top: 40px;
+  transform: translate(0, 0);
   background: #dadada;
-  -moz-transition: all 0.1s ease !important;
-  -o-transition: all 0.1s ease !important;
-  -webkit-transition: all 0.1s ease !important;
-  transition: all 0.1s ease !important;
-  /*&:after {
-            content: '';
-            display: block;
-            width: 100%;
-            background: @headerbackground;
-            height: @heightOfHeader;
-            position: absolute;
-            top: -@heightOfHeader;
-        }*/
+  -moz-transition: transform 0.1s ease !important;
+  -o-transition: transform 0.1s ease !important;
+  -webkit-transition: transform 0.1s ease !important;
+  transition: transform 0.1s ease !important;
+  -webkit-backface-visibility: hidden;
 }
 .class-choose .top-container .wrapper {
   margin: 0 auto;
@@ -482,20 +140,6 @@ body.collapseHeader .title-strip {
   align-items: center;
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
-  /*.icon {
-                &.ng-enter {
-                    opacity: 0;
-                }
-
-                &.ng-enter-stagger {
-                    transition-delay: 0.1s;
-                    transition-duration: 0s;
-                }
-
-                &.ng-enter.ng-enter-active {
-                    opacity: 1;
-                }
-            }*/
 }
 .class-choose .top #selected-classes button {
   color: #ffffff;
