--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Js.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.University.Resources
+@model bool
 <div collapse-header>
     <div class="explore" @*ng-if="!cc.showCreateClass"*@>
         <div class="top-container">
@@ -36,9 +37,10 @@
             </div>
         </div>
         <div class="search-container" flex-gt-md="85">
-            <div class="grid-container">
-                <ol class="results list-unstyled" id="results" srph-infinite-scroll="cc.loadMore()">
-                    <li color-parent="{{::department.id}}" ng-repeat="department  in cc.data | limitTo:cc.limit  track by department.id">
+            <div class="grid-container" >
+                <ol class="results list-unstyled" id="results" vs-repeat="@Model" vs-size="department.boxes.length * 72" vs-scroll-parent="window">
+                    @*| limitTo:cc.limit*@
+                    <li color-parent="{{::department.id}}" ng-repeat="department  in cc.data  track by department.id">
                         <div class="closed-department" ng-if="::department.type === 'closed'" ng-include="'close-department.html'"></div>
                         <div ng-if="::department.type !== 'closed'" ng-include="'open-department.html'"></div>
                     </li>
