--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_Menu.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_Menu.cshtml
@@ -56,7 +56,7 @@
                                 <md-icon md-svg-icon="t:universityMenu"></md-icon>
                             </span>
                             <span class="title">
-                                @IndexResources.Uni
+                                @GeneralResources.BrowseClasses
                             </span>
                         </div>
                     </button>
