--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.css
@@ -14,7 +14,7 @@
 .full-screen header {
   top: 0;
   color: #ffffff;
-  background-color: #4190b9;
+  background-color: #323538;
   border-bottom: 5px solid #dadada;
   height: 70px;
   line-height: 65px;
