--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
@@ -15,7 +15,7 @@
     header {
         top: 0;
         color: @textColorWhite;
-        background-color: @buttonColorBlue;
+        background-color: @headerbackground;
         border-bottom: 5px solid @backgroundColor;
         height: @fullScreenHeaderHeight;
         line-height: @fullScreenHeaderHeight - 5;
