--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -145,6 +145,7 @@ body.collapseHeader .class-choose .top-container {
                 span {
                     width: 100%;
                     line-height: inherit;
+                    text-transform:capitalize;
                 }
             }
 
@@ -262,6 +263,7 @@ body.collapseHeader .class-choose .top-container {
             flex-direction: column;
             padding: 10px 15px;
             text-align: center;
+            margin-top:5px;
 
             h5 {
                 font-size: 20px;
@@ -371,7 +373,7 @@ body.collapseHeader .class-choose .top-container {
 
     .create-class-wrapper {
         text-align: center;
-        padding-top: 40px;
+        margin-top: 40px;
 
         .text {
             margin-bottom: 8px;
