--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -149,6 +149,7 @@ body.collapseHeader .class-choose .top-container {
 .class-choose .top #selected-classes button span {
   width: 100%;
   line-height: inherit;
+  text-transform: capitalize;
 }
 .class-choose .top #selected-classes .empty {
   border: 1px dashed #888b8e;
@@ -279,6 +280,7 @@ body.collapseHeader .class-choose .top-container {
   flex-direction: column;
   padding: 10px 15px;
   text-align: center;
+  margin-top: 5px;
 }
 .class-choose .results .closed-department .box-style h5 {
   font-size: 20px;
@@ -379,7 +381,7 @@ body.collapseHeader .class-choose .top-container {
 }
 .class-choose .create-class-wrapper {
   text-align: center;
-  padding-top: 40px;
+  margin-top: 40px;
 }
 .class-choose .create-class-wrapper .text {
   margin-bottom: 8px;
