--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -263,7 +263,7 @@ body.collapseHeader .class-choose .top-container {
             flex-direction: column;
             padding: 10px 15px;
             text-align: center;
-            margin-top:5px;
+            margin-top
 
             h5 {
                 font-size: 20px;
@@ -373,7 +373,7 @@ body.collapseHeader .class-choose .top-container {
 
     .create-class-wrapper {
         text-align: center;
-        margin-top: 40px;
+        margin: 80px 0 ;
 
         .text {
             margin-bottom: 8px;
