--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -276,7 +276,6 @@ md-menu-item > a.md-button {
 
     .notificationButton {
         margin: 3px 0;
-        //.general-button();
         font-weight: bold;
         font-size: 16px;
         padding: 0 20px;
@@ -289,7 +288,27 @@ md-menu-item > a.md-button {
         @media(max-width: 600px) {
             padding: 0 10px;
         }
+        //animation: breathing 7s ease-out infinite normal;
+        //animation-delay:5s;
+        &.ng-enter {
+            animation-name: breathing;
+            animation-duration: 3s;
+            animation-timing-function: ease-out;
+            animation-iteration-count: 1;
+        }
     }
+}
+@-webkit-keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+}
+@-moz-keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+}
+@-o-keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+}
+@keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
 }
 
 .box-nav-bar ~ div {
@@ -824,29 +843,25 @@ md-menu-item > a.md-button {
     }
 }
 
-
-.item-animate.ng-move,
-.item-animate.ng-enter,
-.item-animate.ng-leave {
-    -moz-transition: all linear 0.5s;
-    -o-transition: all linear 0.5s;
-    -webkit-transition: all linear 0.5s;
-    transition: all linear 0.5s;
-}
-
-.item-animate.ng-leave.ng-leave-active,
-.item-animate.ng-move,
 .item-animate.ng-enter {
+    /* standard transition code */
+    transition: 1s linear all;
     opacity: 0;
-    //max-height: 0;
 }
 
-.item-animate.ng-leave,
-.item-animate.ng-move.ng-move-active,
-.item-animate.ng-enter.ng-enter-active {
-    opacity: 1;
-    // max-height: 40px;
+.item-animate.ng-enter-stagger {
+    /* this will have a 100ms delay between each successive leave animation */
+    transition-delay: 0.1s;
+    /* As of 1.4.4, this must always be set: it signals ngAnimate
+    to not accidentally inherit a delay property from another CSS class */
+    transition-duration: 0s;
 }
+
+.item-animate.ng-enter.ng-enter-active {
+    /* standard transition styles */
+    opacity: 1;
+}
+
 
 
 .drop {
