--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -13,7 +13,7 @@
             color: #fff;
             padding: 0 3%;
             margin: 0;
-            width: 100%;
+            //width: 100%;
 
             img {
                 background-color: #f1f1f1;
