--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -289,7 +289,25 @@ md-menu-item > a.md-button {
         @media(max-width: 600px) {
             padding: 0 10px;
         }
+        &.ng-enter {
+            animation-name: breathing;
+            animation-duration: 3s;
+            animation-timing-function: ease-out;
+            animation-iteration-count: 1;
+        }
     }
+}
+@-webkit-keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+}
+@-moz-keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+}
+@-o-keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+}
+@keyframes breathing {
+    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
 }
 
 .box-nav-bar ~ div {
