--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
@@ -275,6 +275,68 @@ md-menu-item > a.md-button {
     padding: 0 10px;
   }
 }
+.page-head .need-follow .notificationButton.ng-enter {
+  animation-name: breathing;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
+}
+@-webkit-keyframes breathing {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  60% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-moz-keyframes breathing {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  60% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-o-keyframes breathing {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  60% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes breathing {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  60% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .box-nav-bar ~ div {
   margin: 0 -8px;
 }
