--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -71,6 +71,9 @@
         height: ~"calc(100vh - @{heightOfHeader})";
         background: @backgroundColor;
 
+        @media(max-width:960px) {
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
+        }
 
         @media(min-width: 960px) {
             margin-top: 10px;
