--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -2,7 +2,7 @@
 
 @animationDuration: 0.5s;
 
-.safariTransitionFixes(){
+.safariTransitionFixes() {
     -webkit-backface-visibility: hidden;
     -webkit-transform: translate3d(0,0,0);
     -webkit-transform-style: preserve-3d;
@@ -36,22 +36,60 @@ body.collapseHeader .class-choose .top-container {
         .displayFlex;
         align-items: center;
         justify-content: center;
-        height: 40px;
+        //height: 40px;
         background: #FF9900;
         color: @textColorWhite;
         position: absolute;
         top: 0;
         margin: 0;
         width: 100%;
+        z-index: 1;
+        transition: all linear 0.5s;
+        &.ng-enter,&.ng-leave-active {
+            height: 0;
+            opacity:0;
+        }
 
+        &.ng-enter-active, &.ng-leave {
+            height: 40px;
+            opacity:1;
+        }
+        div {
+            position: relative;
+            width: 270px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            overflow-y: hidden;
+            @media(max-width: 600px) {
+                width: 170px;
+            }
+        }
         h2, ng-pluralize {
-            font-size: 16px;
+            font-size: 20px;
             line-height: normal;
             margin: 0;
             white-space: nowrap;
 
             @media(max-width: 600px) {
                 font-size: 14px;
+            }
+            transition: all linear 0.5s;
+
+            &.ng-enter, &.ng-leave {
+                position: absolute;
+                top: 10px;
+            }
+
+            &.ng-enter {
+                transform: translateY(-150%);
+            }
+
+            &.ng-enter-active, &.ng-leave {
+                transform: translateY(0%);
+            }
+            &.ng-leave-active {
+                transform: translateY(150%);
             }
         }
 
@@ -65,9 +103,6 @@ body.collapseHeader .class-choose .top-container {
         }
     }
 
-    .status-strip {
-        z-index: 1;
-    }
 
     .title-strip {
         opacity: 0;
@@ -145,7 +180,7 @@ body.collapseHeader .class-choose .top-container {
                 span {
                     width: 100%;
                     line-height: inherit;
-                    text-transform:capitalize;
+                    text-transform: capitalize;
                 }
             }
 
@@ -263,7 +298,7 @@ body.collapseHeader .class-choose .top-container {
             flex-direction: column;
             padding: 10px 15px;
             text-align: center;
-            margin-top
+            margin-top: 5px;
 
             h5 {
                 font-size: 20px;
@@ -373,7 +408,7 @@ body.collapseHeader .class-choose .top-container {
 
     .create-class-wrapper {
         text-align: center;
-        margin: 80px 0 ;
+        margin: 80px 0;
 
         .text {
             margin-bottom: 8px;
