--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -1,14 +1,14 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Box.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
-<div class="ad" data-ng-dfp-ad-container>
+@*<div class="ad" data-ng-dfp-ad-container>
     <div data-ng-dfp-ad="div-gpt-ad-1461243129238-3" data-ng-dfp-ad-hide-when-empty></div>
-</div>
+</div>*@
 <div uib-collapse="!b.inviteOpen" compile-html="b.html" expanding="b.inviteExpand()" class="collapsible"></div>
 <div class="page-head">
     <div layout="row" layout-align="start start" ng-hide="b.settingsOpen" class="page-title box-title" ng-class="{'need-follow' : b.needFollow}">
         <h1 class="multi-line-ellipsis limit-two">{{b.data.name}}</h1>
-        <button ng-if="b.needFollow" type="button" ng-click="b.follow()" class="notificationButton text-capitalize" ga-track-event="['box', 'follow']">@BoxResources.JoinClass</button>
+        <button ng-if="b.needFollow" type="button" ng-click="b.follow()" class="angular-animate notificationButton text-capitalize" ga-track-event="['box', 'follow']">@BoxResources.JoinClass</button>
         @*<button class="box-settings" flex="none" ng-if="!b.needFollow" type="button" ng-click="b.toggleSettings()" ga-track-event="['box', 'settings']">@Html.Svg("/images/site/icons.svg", "ThreeDots")</button>*@
     </div>
 </div>
