--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
@@ -1,11 +1,4 @@
-﻿.folder-selected .folder-name {
-  max-width: calc(100% - 40px);
-}
-.folder-selected .name-and-icon {
-  width: 100%;
-  max-width: calc(100% - 40px);
-}
-.folder-selected .folder-name,
+﻿.folder-selected .folder-name,
 .folders .folder-name {
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
@@ -61,6 +54,13 @@
 }
 .folder-selected {
   margin: 8px 8px 20px 8px;
+}
+.folder-selected .folder-name {
+  max-width: calc(100% - 40px);
+}
+.folder-selected .name-and-icon {
+  width: 100%;
+  max-width: calc(100% - 40px);
 }
 .folder-selected .folder-name .content {
   background: #4190b9;
@@ -280,6 +280,18 @@ md-menu-item > a.md-button {
   animation-duration: 3s;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+}
+.page-head .need-follow 0% {
+  transform: scale(0);
+}
+.page-head .need-follow 25% {
+  transform: scale(1.1);
+}
+.page-head .need-follow 60% {
+  transform: scale(0.5);
+}
+.page-head .need-follow 100% {
+  transform: scale(1);
 }
 @-webkit-keyframes breathing {
   0% {
