Starting to work on flashcards.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
@@ -43,10 +43,10 @@
             </div>
             <div class="stats" ng-hide="::e.numOfViews == undefined">
                 <div class="views">
-                    {{::e.numOfViews}} <md-icon md-svg-icon="b:eye"></md-icon>@*@Html.Svg(svgUrl, "eye")*@
+                    {{::e.numOfViews}} <md-icon md-svg-icon="b:eye"></md-icon>
                 </div>
                 <div class="likes">
-                    {{::e.likes}} <md-icon md-svg-icon="b:like"></md-icon>@*@Html.Svg(svgUrl, "like")*@
+                    {{::e.likes}} <md-icon md-svg-icon="b:like"></md-icon>
                 </div>
             </div>
         </div>
