--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/Index2.cshtml
@@ -12,9 +12,7 @@
         <a href="{{::l.nodeDetail.parentUrl}}" ga-track-event="['university', 'back arrow']">
             <h2 layout="row">
                 <span class="arrow back-arrow"><md-icon md-svg-icon="t:arrow"></md-icon></span>
-                <span class="name ellipsis">
-                    {{::l.nodeDetail.name}}
-                </span>
+                <span class="name ellipsis">{{::l.nodeDetail.name}}</span>
             </h2>
         </a>
     </div>
