--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -23,7 +23,7 @@
     <md-tab ui-sref="box.quiz" md-active="b.isActiveState('box.quiz')">
         <md-tab-label><span>@GeneralResources.Quizzes</span></md-tab-label>
     </md-tab>
-    <md-tab ui-sref="box.quiz" md-active="b.isActiveState('box.flashcards')">
+    <md-tab ui-sref="box.flashcards" md-active="b.isActiveState('box.flashcards')">
         <md-tab-label><span>Flashcards</span></md-tab-label>
     </md-tab>
     <md-tab ui-sref="box.members" md-active="b.isActiveState('box.members')">
