--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
@@ -1,1 +1,30 @@
-﻿<div>hi</div>
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+<ul layout="row" layout-padding layout-wrap layout-align="start stretch" class="list-unstyled quizzes-list">
+    <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" hide-xs hide-sm class="add-button i-q-wrapper">
+        @*TODO: use directive user-not-register-click - its not working somehow *@
+        <a class="content" ui-sref="flashcardCreate({boxtype: f.params.boxtype, universityType:f.params.universityType, boxId: f.params.boxId, boxName:f.params.boxName})" ga-track-event="['box-flashcards', 'addFlashcard']">
+            <div class="quizCreate">
+                <md-icon md-svg-icon="t:add"></md-icon>
+                <div class="text">
+                    Create a flashcard
+                </div>
+            </div>
+        </a>
+    </li>
+
+    @*<li flex flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50" class="i-q-wrapper quizzes" ng-repeat="e in q.quizzes">
+        <div ng-include="'quiz-template.html'"></div>
+        <md-menu ng-if="b.canDelete(e.ownerId)" class="quiz-menu">
+            <md-button aria-label="open menu" class="md-icon-button delete" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['box-quizzes', 'deleteQuiz']">
+                <md-icon md-svg-icon="t:ThreeDots" class="dots-3 quiz-dots"></md-icon>
+            </md-button>
+            <md-menu-content width="1">
+                <md-menu-item>
+                    <md-button ng-click="q.deleteQuiz($event,e)" ga-track-event="['box-quizzes', 'didDelete']">
+                        @GeneralResources.Delete
+                    </md-button>
+                </md-menu-item>
+            </md-menu-content>
+        </md-menu>
+    </li>*@
+</ul>
