--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Quizzes2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Quizzes2.cshtml
@@ -6,7 +6,6 @@
         <a class="content" ng-click="q.createQuiz($event)" ui-sref="quizCreate({boxtype: q.params.boxtype, universityType:q.params.universityType, boxId: q.params.boxId, boxName:q.params.boxName})" ga-track-event="['box-quizzes', 'addQuiz']">
             <div class="quizCreate">
                 <md-icon md-svg-icon="t:add"></md-icon>
-                @*@Html.Svg("~/images/site/icons.svg", "add")*@
                 <div class="text">
                     @GeneralResources.CreateQuiz
                 </div>
@@ -19,11 +18,10 @@
         <md-menu ng-if="b.canDelete(e.ownerId)" class="quiz-menu">
             <md-button aria-label="open menu" class="md-icon-button delete" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['box-quizzes', 'deleteQuiz']">
                 <md-icon md-svg-icon="t:ThreeDots" class="dots-3 quiz-dots"></md-icon>
-                @*@Html.Svg("~/images/site/icons.svg", "ThreeDots", new {@class = "dots-3 quiz-dots"})*@
             </md-button>
             <md-menu-content width="1">
                 <md-menu-item>
-                    <md-button aria-label="delete reply" ng-click="q.deleteQuiz($event,e)" ga-track-event="['box-quizzes', 'didDelete']">
+                    <md-button ng-click="q.deleteQuiz($event,e)" ga-track-event="['box-quizzes', 'didDelete']">
                         @GeneralResources.Delete
                     </md-button>
                 </md-menu-item>
