--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -39,4 +39,5 @@
     <md-input-container>
         <textarea ng-model="slide.text">a</textarea>
     </md-input-container>
+    <md-button>img</md-button>
 </script>
